kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: commhub-prod
  labels:
    name: commhub-prod
    environment: production
